# rules_go_runfiles_binary

./: BUILD.bazel  WORKSPACE  main.go  main_test.go  script.sh
