load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/filipesilva/rules_go_runfiles_binary/main",
    visibility = ["//visibility:private"],
    deps = ["@io_bazel_rules_go//go/tools/bazel:go_default_library"],
    data = [":file.txt"],
)

go_binary(
    name = "binary",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
)
